fixing setting popup content display on mobile

--- a/styles.css
+++ b/styles.css
@@ -563,7 +563,7 @@ form {
   }
 
   .setting-popup-content {
-    width: 200px;
+    width: 300px;
   }
 
   .task-info {
